fix copy clipboard on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+html,
 :root {
   touch-action: none;
   height: 100%;
@@ -150,7 +151,7 @@ body {
   cursor: pointer;
 
   &:hover {
-    border: 1px solid #fff;
+    border: 1px solid #aaa;
     color: #aaa;
   }
 
